[package]
name = "atproto-repo"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ciborium = "0.2"
cid = { version = "0.10", features = ["serde-codec"] }
futures = "0.3"
futures-util = "0.3"
rs-car = "0.4"
serde = { version = "1", features = ["derive"] }
thiserror = "1"
