[package]
name = "skylight-followsdb-crawlstatus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
heed = "0.20.0-alpha.4"
skylight-followsdb = { path = "../skylight-followsdb" }
