[package]
name = "skylight-followsdb-csvimporter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1"
clap = { version = "4", features = ["derive"] }
heed = "0.20.0-alpha.4"
indicatif = "0.17"
serde = { version = "1", features = ["derive"] }
skylight-followsdb = { path = "../skylight-followsdb" }
