[package]
name = "skylight-followsingester"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
atproto-repo = { path = "../atproto-repo" }
ciborium = "0.2"
clap = { version = "4", features = ["derive"] }
futures = "0.3.28"
rs-car = "0.4"
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11"
sqlx = { version = "0.7", features = [ "runtime-tokio", "postgres" ] }
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.18", features = ["native-tls"] }
tracing = "0.1"
tracing-subscriber = "0.3"
