[package]
name = "skylight-plcingester"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
atproto-repo = { path = "../atproto-repo" }
clap = { version = "4", features = ["derive"] }
governor = "0.6"
reqwest = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7", features = [ "runtime-tokio", "postgres" ] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
