[package]
name = "skylight-queryserver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_qs = { version = "0.12", features = ["warp"] }
sqlx = { version = "0.7", features = [ "runtime-tokio", "postgres" ] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
warp = "0.3"
