[package]
name = "skylight-queryserver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
async-trait = "0.1"
axum = { version = "0.6", features = ["json"] }
clap = { version = "4", features = ["derive"] }
hyper = { version = "0.14", features = ["full"] }
http = "0.2"
tower = "0.4"
serde = { version = "1", features = ["derive"] }
serde-querystring = { version = "0.2" }
sqlx = { version = "0.7", features = [ "runtime-tokio", "postgres" ] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
